feat: remove visitor module (out of scope per Ma'am Emy), add T&C + data privacy, add waiver for personal reason pass slips, add category dropdown